fix chat api
