# src/routes/chat.routes.js
@@ -14,5 +14,6 @@ router.get('/conversations/:id/messages', chatController.listMessages);
 router.post('/conversations/:id/messages', chatController.send);
 router.post('/conversations/:id/read', chatController.read);
 router.post('/conversations/:id/close', chatController.close);
+router.delete('/conversations/:id/messages/:messageId', chatController.deleteMessage);
 
 module.exports = router;
